# crypt

./: .env.example  .gitignore  README.md  adversarial_source_review_handoff.md  claude_code_review_handoff.md  config.example.yaml  crypto_auto_trading_prompt.md  findings.md  progress.md  pyproject.toml
.claude/: progress.md
docs/: claude_mem_golden_tasks.md  claude_mem_karpathy_rules_proposal.md  claude_mem_repo_registry.md  claude_mem_rollback_and_deps.md  claude_mem_rollout_checklist.md  claude_mem_security_tests.md  cognee_poc_plan.md  exchange_comparison.md  live_trade_design.md  magika_poc_plan.md  master_design.md  model_comparison.md  open_agents_threat_model.md  research_plan.md  risk_policy.md  task_plan.md
notebooks/: regime_analysis_w10_w11.ipynb
scripts/: grid_search_wf.py
src/cryptbot/: __init__.py  main.py
tests/: conftest.py
tests/test_backtest/: test_benchmark.py  test_engine.py  test_metrics.py
tests/test_config/: test_settings.py
tests/test_data/: test_fetcher.py  test_normalizer.py  test_ohlcv_updater.py  test_storage.py
tests/test_exchanges/: test_base.py  test_bitbank.py  test_bitbank_private.py
tests/test_execution/: test_live_executor.py  test_paper_executor.py
tests/test_live/: test_engine.py  test_gate.py  test_recovery_integration.py  test_state.py
tests/test_main/: test_e2e.py  test_main.py
tests/test_models/: test_degradation_detector.py  test_experiment_manager.py  test_feature_builder.py  test_label_builder.py  test_lgbm_model.py  test_xgb_model.py
tests/test_paper/: test_consistency.py  test_engine.py  (+2 more)
(+52 files in other folders)
